// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validate-document should handle invalid document model 1`] = `
{
  "content": [
    {
      "text": "Error: AxiosError: Request failed with status code 400",
      "type": "text",
    },
  ],
}
`;

exports[`validate-document should validate a valid document 1`] = `
{
  "content": [
    {
      "text": """",
      "type": "text",
    },
  ],
}
`;
